objects/Integrated_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Formal_Name__c</fullName>
        <formula>Integrated_Account__r.Account_Formal_Name__c</formula>
        <label>Account Formal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Integrated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integrated Accounts</relationshipLabel>
        <relationshipName>Integrated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Can only be linked to a &apos;Contract LOA&apos; Opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contract LOA, PT Marketing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Integrated Accounts</relationshipLabel>
        <relationshipName>Integrated_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Integrated Account</label>
    <nameField>
        <displayFormat>IA-{00000000}</displayFormat>
        <label>Integrated Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrated Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>